<resources>
    <string name="app_name">Login screen with MVP</string>
    <string name="action_settings">Ustawienia</string>
    <string name="title_activity_race">Mapa</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nick_musi_zawiera_minimum_3_znaki">Nick musi zawierać minimum 3 znaki</string>
    <string name="nick_zajety">Nick zajety</string>
    <string name="title_activity_edytuj_trase">Edytuj trase</string>
    <string name="czy_na_pewno_usunac_trase">Czy na pewno usunąć trasę?</string>
    <string name="usun_trase">Usuń trasę</string>
    <string name="anuluj">Anuluj</string>
    <string name="pole_wymagane_nie_b_dzie_mo_na_go_p_niej_zmieni">Pole wymagane. Nie będzie można go później zmienić</string>
    <string name="marka">Marka</string>
    <string name="model">Model</string>
    <string name="pojemno">Pojemność</string>
    <string name="silnik_do_adowany">Silnik doładowany</string>
    <string name="zapisz">ZAPISZ</string>
    <string name="login">LOGIN</string>
    <string name="has_o">HASŁO</string>
    <string name="zaloguj">Zaloguj</string>
    <string name="b_dny_login_lub_has_o">Błędny login lub hasło</string>
    <string name="nie_masz_konta_za_je_za_darmo_juz_teraz">Nie masz konta? Załóż je za darmo już teraz!</string>
    <string name="za_nowe_konto">Zarejestruj</string>
    <string name="powt_rz_n_has_o">POWTÓRZ HASŁO</string>
    <string name="akceptuje">Akceptuje </string>
    <string name="regulamin">regulamin</string>
    <string name="login_zajety">Login zajęty</string>
    <string name="zbyt_kr_tkie_has_o">Hasło zbyt krótkie</string>
    <string name="podane_has_a_nie_s_identyczne">Podane hasła nie są identyczne</string>
    <string name="musisz_zaakceptowa_regulamin">Musisz zaakaceptować regulamin</string>
    <string name="obraz_trasy">Obray trasz</string>
    <string name="nazwa">Naywa</string>
    <string name="oce_tras">Oce} tras</string>
    <string name="tw_j_wynik">Twój czas:</string>
    <string name="stworzona_przez">Twórca:</string>
    <string name="jedz">Jedź!</string>
    <string name="moje_trasy">Moje trasy</string>
    <string name="zmie_dane_konta">Moje konto</string>
    <string name="wyloguj">Wyloguj</string>
    <string name="zako_cz">Zakończ</string>
    <string name="Pole_login_oraz_hasło_nie_mogą_być_puste">Pola login oraz hasło nie mogą być puste!</string>
    <string name="Bledny_autor">Błędny autro</string>
    <string name="Zakończ">Zakończ</string>
    <string name="Haslo_musi_sie_skladac_z_conajmniej_6_znakow">Hasło musi zawierać min. 6 znaków</string>
    <string name="nie_udalo_sie_polaczyc_z_serwerem">Nie udało się połączyć z serwerem\n Spróbuj później</string>
    <string name="poprawnie_zapisano_dane_trasy">Zapisano dane trasy</string>
    <string name="wystapil_blad_sproboj_pozniej">Wystąpił błąd. Spróbuj później</string>
    <string name="poprawnie_zapisano">Poprawnie zapisano</string>
    <string name="osiagnieto_limit_tras">Osiągnąłeś limit tras</string>
    <string name="osiagnmieto_maksymalna_ilosc_punktow">Osiągnięto maksymalną ilość punktów</string>
    <string name="zapisano_wynik">Zapisano czas</string>
    <string name="wystapil_problem_z_zapisaniem_wyniku">Wystąpił problem podczas zapisywania czasu</string>
    <string name="dodano_punkt">Dodano punkt</string>
    <string name="cofnij">Cofnij</string>
    <string name="rozpoczac_tworzenie_nowej_trasy">Rozpocząć tworzenie nowej trasy?</string>
    <string name="stworz">Stwórz</string>
    <string name="przetestuj_trase_przejedz_przez_wszystkie_punkty_aby_ja_udostepnic">Przetestuj trasę. Zalicz wszystkie punkty, aby udostępnic ją innym graczą"</string>
</resources>
