<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView5"
        android:layout_marginTop="56dp"
        android:text="@string/login"
        android:textColor="@android:color/black"
        android:textSize="25dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="139dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="124dp"
        android:text="@string/has_o"
        android:textColor="@android:color/black"
        android:textSize="25dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextLogin"
        android:layout_width="179dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editTextHaslo"
        android:layout_alignTop="@+id/textView2"
        android:ems="12"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextHaslo"
        android:layout_width="179dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textView3"
        android:layout_marginEnd="11dp"
        android:ems="12"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonZaloguj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/zaloguj" />

    <TextView
        android:id="@+id/textViewZleDane"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="199dp"
        android:textColor="@android:color/holo_red_dark"
        android:text="@string/b_dny_login_lub_has_o"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="118dp"
        android:text="@string/nie_masz_konta_za_je_za_darmo_juz_teraz" />

    <Button
        android:id="@+id/buttonZarejestruj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:text="@string/za_nowe_konto" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="26dp"
        android:layout_height="33dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="110dp"
        android:visibility="invisible" />


</RelativeLayout>